﻿Version 1.2.9
MVC 5
- Web.config Set <httpErrors existingResponse="PassThrough"> for the Debug version.
- Web.config Set <httpErrors existingResponse="Replace"> for the Release version.

Version 1.2.8
MVC 5
- SideWaffle fix: New GUID now generated for each project.
- Added a note to upgrade to .NET 4.6 in ReadMe.html.
- Added a link to webaim.org to check accessibility in ReadMe.html.
- Fix Site.less linting errors. Fixed order.
- Fix Site.js linting errors. Added missing semi-colons.
- Added CancellationToken to RSS Feed to allow cancellation of requests. See http://www.davepaquette.com/archive/2015/07/19/cancelling-long-running-queries-in-asp-net-mvc-and-web-api.aspx
MVC 6
- SideWaffle fix: New GUID now generated for each project.
- SideWaffle fix: Target VSIX project template at .NET 4.5.1.
- gulp-tsc (TypeScript) and gulp-if added to package.json.
- userSecretsId set in project.json.
- SideWaffle _preprocess.xml updated so a new userSecretsId GUID is generated for each project.
- gulpfile.js updated so that you can now start with CSS (.css) or LESS (.less) and compile to CSS.
- gulpfile.js updated so that you can now start with TypeScript (.ts) or JavaScript (.js) and compile to JavaScript.
- gulpfile.js updated with CSS, LESS, JavaScript and TypeScript linting tasks.
- gulpfile.js updated with a Google Page Speed performance test tasks.
- Fix Site.less linting errors. Fixed order.
- Fix Site.js linting errors. Added missing semi-colons.
- AddUserSecrets for all environments in Startup.Configuration.cs.
- UseAspNetMvcBoilerplate in ApplicationBuilderExtensions.cs renamed to UseBoilerplate.
- Added Startup.Caching.cs to configure IDistributedCache and IMemoryCache.
- Added Startup.Debugging.cs to configure browser link, console logging and other debugging tools.
- Added Startup.ErrorPages.cs to configure error pages.
- Added a note to upgrade to .NET 4.6 in ReadMe.html.
- Added a link to webaim.org to check accessibility in ReadMe.html.