@@ -1,15 +1,0 @@
-﻿namespace MvcBoilerplate.Controllers
-{
-    using System;
-    using System.Collections.Generic;
-    using System.Linq;
-    using System.Threading.Tasks;
-    using Microsoft.AspNet.Mvc;
-
-    //  ? format = json
-    [FormatFilter]
-    public class WebApiController : Controller
-    {
-
-    }
-}
